--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/cosmos": "^3.15.1",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1"
   },
