--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@azure/cosmos": "^3.15.1",
-    "axios": "^0.27.2",
-    "crypto-js": "^4.1.1"
+    "@azure/storage-blob": "^12.10.0",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "@azure/functions": "^3.0.0",
-    "@types/crypto-js": "^4.1.1",
     "typescript": "^4.0.0"
   }
 }
