--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   },
   "dependencies": {
     "@varlet/ui": "^1.27.7",
+    "js-cookie": "^3.0.1",
+    "nanoid": "^3.3.4",
+    "public-ip": "^5.0.0",
+    "vant": "^3.4.9",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.14",
-    "axios": "^0.27.2",
-    "crypto-js": "^4.1.1"
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "^17.0.30",
     "@vitejs/plugin-vue": "^2.3.1",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.7",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-tsc": "^0.34.7"
   }
 }
